# sksoopenalgo

./: .coderabbit.yaml  .gitignore  ADVANCED_ML_STRATEGY.md  AGENTS.md  ALL_STRATEGIES_COMPARISON.md  AUDIT_SUMMARY.md  AWS_LIGHTSAIL_STATUS_GUIDE.md  AWS_STATUS_CHECK_COMPLETE.md  COMPLETE_SYSTEM_SUMMARY.md  COMPREHENSIVE_DEBUGGING_REPORT_2026-01-29.md  Colab_Backtest.ipynb  DAILY_AUDIT_REPORT.md  DAILY_AUDIT_REPORT_2026-01-27.md  DAILY_PERFORMANCE.md  DAILY_PREP.md  DAILY_REPORT.md  DAILY_REPORT_BRIEF.md  DAILY_STATUS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN_4_STRATEGIES.md  DHAN_READY_FOR_DEPLOYMENT.md  EQUITY_STRESS_TEST.md  FILES_CREATED.md  GETTING_STARTED.txt  IC_STRATEGY_FINDINGS.md  LEADERBOARD.md  LIVE_MONITORING_SUMMARY.md  LIVE_TRADING_CHECKLIST.md  LIVE_TRADING_QUICK_START.txt  MCX_STRATEGY_ENHANCEMENTS_DEPLOYED.md  Makefile  NEW_ADVANCED_STRATEGY_SUMMARY.md  NEW_STRATEGY_ADDED.md  NIFTY_EQUITY_STRATEGY_ANALYSIS_2026-01-29.md  OPENALGO_LIVE_TRADING_SETUP.md  PAPER_TRADING_GUIDE.md  PORTFOLIO_AUDIT.md  PRE_TRADING_STATUS_REPORT.md  PRODUCTION_CHECKLIST.md  QUICK_START.md  (+105 more)
AITRAPP/AITRAPP/: .gitignore  BURN_IN_CHECKLIST.md  BURN_IN_COMPLETE.md  BURN_IN_MONITORING.md  BURN_IN_PLAN.md  BURN_IN_PROTOCOL.md  BURN_IN_READY.md  CANARY_LIVE_FLIP.md  CHAOS_TEST_SUITE.md  CLAUDE_MCP_SETUP.md  COMMIT_READY.md  COMPLETE_SYSTEM_READY.md  CONNECT_MCP_TO_CLAUDE.md  DAY1_BURNIN_CHECKLIST.md  DAY1_BURNIN_LOG.md  DAY1_GO_SEQUENCE.md  DAY1_RUNBOOK.md  DAY1_STATUS_REPORT.md  DAY1_TIMELINE.md  DAY2_CHEAT_SHEET.md  DAY2_CHECKLIST.md  DAY2_FINAL_RUNBOOK.md  DAY2_GO_BLOCK.md  GO_NOW.md  (+80 more)
(+744 files in other folders)
